fix jump content on pomodoro launch

--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -11,6 +11,9 @@
     border-radius: 0.5rem;
     background-color: rgba(0, 0, 0, 0.1);
     color: var(--text-color);
+    &-done {
+      width: 3rem;
+    }
   }
 
   &__btn {
